--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,9 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "protocol": "inspector"
-            
+            "env": {
+                "protocol": "inspector"
+            }
         }
     ]
 }
