--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "debug": "nodemon --inspect"
+    "debug": "nodemon --inspect",
+    "start": "node --loader ts-node/esm src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -34,7 +36,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.1.0",
     "prettier": "^2.8.7",
     "sequelize-cli": "^6.6.0",
     "sucrase": "^3.31.0",
