--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.30.0",
+    "ts-node": "^10.9.2",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
   },
